--- a/plugin.yml
+++ b/plugin.yml
@@ -4,6 +4,8 @@ version: 0.0.1
 api: 3.15.0
 author: brokiem
 
+mcpe-protocol: [ 407, 408, 418, 419, 421, 422, 428 ]
+
 permissions:
   snpc.*:
     default: op
