--- a/plugin.yml
+++ b/plugin.yml
@@ -3,13 +3,11 @@ main: brokiem\snpc\SimpleNPC
 version: 0.0.1
 api: 3.15.0
 author: brokiem
+website: https://github.com/brokiem/SimpleNPC
 mcpe-protocol: [ 407, 408, 418, 419, 421, 422, 428 ]
-
 softdepend: [ "Slapper" ]
 
 permissions:
-  snpc.command.use:
-    default: op
   snpc.spawn:
     default: op
   snpc.edit:
