--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: SimpleNPC
 main: brokiem\snpc\SimpleNPC
-version: 0.0.1
+version: 1.0.0-beta
 api: 3.15.0
 author: brokiem
 website: https://github.com/brokiem/SimpleNPC
