--- a/.poggit.yml
+++ b/.poggit.yml
@@ -5,7 +5,7 @@ branches:
 projects:
   SimpleNPC:
     path: ""
-    icon: "/assets/icon.png"
+    icon: "/assets/logo.png"
     libs:
       - src: GiantQuartz/EasyUI/libEasyUI
         version: 1.0.0
