--- a/plugin.yml
+++ b/plugin.yml
@@ -5,6 +5,7 @@ api: 3.15.0
 author: brokiem
 website: https://github.com/brokiem/SimpleNPC
 mcpe-protocol: [407, 408, 418, 419, 421, 422, 428]
+softdepend: ["Slapper"]
 
 permissions:
   snpc.spawn:
