--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,7 +1,8 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/brokiem/SimpleNPC
 build-by-default: true
 branches:
-- master
+- stable
+- dev
 projects:
   SimpleNPC:
     path: ""
