--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,7 +1,7 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/brokiem/SimpleNPC
 build-by-default: true
 branches:
-- stable
+- master
 - dev
 projects:
   SimpleNPC:
