Added edit npc with UI, fix memory leak, added subcommand, and many more

--- a/plugin.yml
+++ b/plugin.yml
@@ -14,6 +14,8 @@ permissions:
     default: op
   snpc.edit:
     default: op
+  snpc.id:
+    default: op
   snpc.notify:
     default: op
   snpc.ui:
