--- a/plugin.yml
+++ b/plugin.yml
@@ -4,7 +4,7 @@ version: 2.0.0
 api: 3.15.0
 author: brokiem
 
-mcpe-protocol: [407, 408, 418, 419, 421, 422, 428]
+mcpe-protocol: [407, 408, 418, 419, 421, 422, 428, 431]
 softdepend: ["Slapper"]
 
 website: https://github.com/brokiem/SimpleNPC/
