--- a/.github/workflows/checker.yml
+++ b/.github/workflows/checker.yml
@@ -18,6 +18,10 @@ jobs:
         uses: wei/wget@v1
         with:
           args: -O vendor/libEasyUI.phar https://poggit.pmmp.io/r/120837/libEasyUI_dev-5.phar
+      - name: wget Slapper
+        uses: wei/wget@v1
+        with:
+          args: -O vendor/Slapper.phar https://poggit.pmmp.io/r/99841/Slapper.phar
       - name: Run PHPStan
         uses: paroxity/pmmp-phpstan-action@3.19.0
         with:
