--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,3 +10,4 @@ parameters:
   excludes_analyse:
     - source/vendor
   checkMissingIterableValueType: false
+  checkGenericClassInNonGenericObjectType:
