--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,10 @@
 name: SimpleNPC
 main: brokiem\snpc\SimpleNPC
 version: 2.0.1
-api: 3.15.0
+api: 3.19.0
 author: brokiem
 
-mcpe-protocol: [407, 408, 418, 419, 421, 422, 428, 431]
+mcpe-protocol: [ 431 ]
 
 website: https://github.com/brokiem/SimpleNPC/
 
