--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,6 +1,6 @@
 ### SimpleNPC Configuration File ###
-# Author: @brokiem (github.com/brokiem)
-# Source code: https://github.com/brokiem/SimpleNPC/
+# Author: @brokiem (https://github.com/brokiem)
+# Source code: https://github.com/brokiem/SimpleNPC
 
 # Don't edit this version
 config-version: 3
