--- a/.poggit.yml
+++ b/.poggit.yml
@@ -6,8 +6,8 @@ projects:
     path: ""
     icon: "/assets/image.png"
     libs:
-      - src: brokiem/EasyUI/libEasyUI
-        version: 1.0.0
+      - src: brokiem/EasyUI/libEasyUI@php7.4
+        version: 2.0.0
     lint:
       phpstan: false
 ...
