pm4 changes, tested and working [ci skip]

--- a/.github/workflows/checker.yml
+++ b/.github/workflows/checker.yml
@@ -5,6 +5,7 @@ on: [ push, pull_request ]
 jobs:
   phpstan:
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message, '[ci skip]') }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -17,11 +18,7 @@ jobs:
       - name: Getting libEasyUI.phar
         uses: wei/wget@v1
         with:
-          args: -O vendor/libEasyUI.phar https://poggit.pmmp.io/r/127939/libEasyUI_dev-7.phar
-      - name: Getting Slapper.phar
-        uses: wei/wget@v1
-        with:
-          args: -O vendor/Slapper.phar https://poggit.pmmp.io/r/99841/Slapper.phar
+          args: -O vendor/libEasyUI.phar https://poggit.pmmp.io/r/128037/libEasyUI_dev-10.phar
       - name: Run PHPStan
         uses: paroxity/pmmp-phpstan-action@3.19.0
         with:
