--- a/plugin.yml
+++ b/plugin.yml
@@ -1,12 +1,12 @@
 name: SimpleNPC
 main: brokiem\snpc\SimpleNPC
-version: 2.1.5
-api: 3.20.0
+version: 3.0.0
+api: 4.0.0
 author: brokiem
 
-mcpe-protocol: [ 440 ]
+mcpe-protocol: [ 422, 428, 431, 440 ]
 
-website: https://github.com/brokiem/SimpleNPC/
+website: https://github.com/brokiem/SimpleNPC
 
 permissions:
   simplenpc.spawn:
