--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,10 +1,11 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/brokiem/SimpleNPC
 branches:
   - master
+  - pm4-new
 projects:
   SimpleNPC:
     path: ""
-    icon: "/assets/image.png"
+    icon: "/assets/icon.png"
     libs:
       - src: brokiem-pm-pl/EasyUI/libEasyUI
         version: 3.0.0
