remove canWalk from command, fix custom human npc converted to vanilla human npc when using skin from link
now $canWalk must be declared in human npc class if human npc can walk, drop support for php 7.3, bug fixes

--- a/plugin.yml
+++ b/plugin.yml
@@ -6,6 +6,9 @@ author: brokiem
 
 mcpe-protocol: [ 440 ]
 
+extensions:
+  Core: '>=7.4'
+
 website: https://github.com/brokiem/SimpleNPC/
 
 permissions:
