--- a/plugin.yml
+++ b/plugin.yml
@@ -4,7 +4,7 @@ version: 2.1.9-dev
 api: 3.20.0
 author: brokiem
 
-mcpe-protocol: [ 440, 448, 471 ]
+mcpe-protocol: [ 440, 448, 465, 471 ]
 
 extensions:
   Core: '>=7.4'
