use update checker virion

--- a/.poggit.yml
+++ b/.poggit.yml
@@ -9,4 +9,7 @@ projects:
     libs:
       - src: brokiem-pm-pl/EasyUI/libEasyUI
         version: 3.0.0
+      - src: brokiem-pm-pl/UpdateChecker/UpdateChecker
+        version: ^1.0.0
+        branch: "pm4"
 ...
